Attempt to fix address bar not hiding on mobile.

--- a/styles/default.css
+++ b/styles/default.css
@@ -379,6 +379,10 @@ a:selection {
 || COMPACT ||
 \==========*/
 @media (max-width: 960px) {
+	html, body {
+		overflow: auto;
+	}
+
 	#page-container {
 		scroll-snap-type: none;
 	}
